test(rfc9842): move the dcz demo onto Jetty, add real HTTP/1.1 vs HTTP/2 measurement
The docs/examples/rfc9842 demo ran on com.sun.net.httpserver, which is
HTTP/1.1-only -- so the README's "HTTP/2 erases the negotiation headers'
cost" claim was calculated from HPACK-indexing arithmetic, never measured.
Every client there also hardcoded Version.HTTP_1_1 for the same reason.

Moves Server/NaiveClient/Rfc9842Client/PerfTest into rfc9842's test
classpath (ServerDemo/NaiveClientDemo/Rfc9842ClientDemo/PerfTestDemo),
rebuilt on embedded Jetty (jetty-server + jetty-http2-server, test-scoped)
so one server speaks real HTTP/1.1 and real HTTP/2 (h2c, no TLS needed --
java.net.http.HttpClient does the RFC 7540 SS3.2 cleartext upgrade) on the
same port. Rfc9842ClientDemo and PerfTestDemo both take --http2 to pick.
Drops run.sh and the "no build, no third-party dependency" framing that
came with it -- exec:java replaces the single-file launcher.

Adds DczTestServer, the shared Jetty engine behind the demo and a new
DczHttpVersionComparisonTest, which sends the same warmed-up dcz-negotiated
request sequence over HTTP/1.1-only and h2c-only connectors and asserts
HTTP/2 moves it in fewer wire bytes (measured via live Connection.getBytesIn/
Out -- Jetty's own ConnectionStatistics only rolls up on connection close,
which never happens on a pooled HttpClient connection). One measured run:
684 B/req on HTTP/1.1 vs 442 B/req on HTTP/2, -35%. README's HTTP/2 section
now cites this instead of arguing from HPACK theory alone.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>